apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__renamed_directive.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1548
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
            }

            me {
                name
            }
        }
        
extracted_scopes: {"profile", "read:user", "read:username"}
request scopes: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/me"]
