apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__scalar.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 975
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            topProducts {
                type
                internal
            }
        }
        
extracted_scopes: {"internal", "test"}
request scopes: []
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/internal"]
