apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__union.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1459
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"a\".to_string(), \"b\".to_string()].into_iter().collect(), result: doc,\n    paths\n}"
---
query:

        query {
            test
            uni {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_scopes: {"a", "b", "c", "d"}
request scopes: ["a", "b"]
filtered:
{
  test
  uni {
    ... on A {
      id
    }
  }
}

paths: ["/uni/... on B"]
